--- a/packages/ur-registry-arweave/package.json
+++ b/packages/ur-registry-arweave/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@keystonehq/bc-ur-registry-arweave",
-  "version": "0.0.1",
+  "version": "0.0.1-alpha.0",
   "description": "bc-ur-registry extension for Arweave",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -24,7 +24,7 @@
   "author": "zhaomengru <zhaomengru2018@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "@keystonehq/bc-ur-registry": "^0.5.0",
+    "@keystonehq/bc-ur-registry": "^0.5.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
